--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="banner">
 			<div class="container">
 			<h1>Trouvez Votre Robe Lolita à Bas Prix</h1>
-			<p>Donner les robes une seconde vie</p>
+			<p>Donner une seconde vie aux robes</p>
 			<a href="#page-list" class="btn-pink">Savoir Plus</a>
 			</div>
 		</div>
